fix overflow bug

--- a/web/src/pages/manage/index.less
+++ b/web/src/pages/manage/index.less
@@ -1,9 +1,11 @@
 .flexContainer {
   display: flex;
+  height: 100%;
 }
 .manageContainer{
   width: 100%;
   padding: 12px;
+  overflow: auto;
 }
 .addBtn{
   float: right;
